--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,10 @@ body {} .dropDivClass {
     line-height: 200px;
     text-align: center;
 }
+@font-face {
+    font-family: cheatRead;
+    src: url('font/Rosarivo-Regular.otf');
+}
 .dropDivClass.dragover {
     border-color: black;
     color: black;
@@ -24,7 +28,10 @@ body {} .dropDivClass {
     background: rgb(202, 60, 60);
     /* this is a maroon */
 }
-
+.monokaiBody {
+    background: #252621;
+    color: #f5276c;
+}
 #uploadWrapper {
     position: absolute;
     margin: auto;
@@ -34,4 +41,28 @@ body {} .dropDivClass {
     left: 0;
     width: 405px;
     overflow: auto;
+}
+.hidden {
+    display: none;
+    height: 0px;
+    widows: 0px;
+    position: absolute;
+}
+#playerWrapper {
+    position: absolute;
+    margin: auto;
+    top: 50px;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 605px;
+    overflow: auto;
+}
+.playerClass {
+    height: 150px;
+    overflow: auto;
+    border: 1px dashed #73705d;
+    line-height: 200px;
+    text-align: center;
+    font-family: chatRead;
 }
