--- a/css/styles.css
+++ b/css/styles.css
@@ -10,26 +10,25 @@ body {
     width: 400px;
     text-align: justify;
 }
-#startDisplayingButton{
-	float:right;
-	margin-top: 6px;
-	margin-left: 6px;
+#startDisplayingButton {
+    float: right;
+    margin-top: 6px;
+    margin-left: 6px;
 }
-#controlForm{
-	float:left;
-
+#controlForm {
+    float: left;
 }
-#hiddenUpload{
-	display: none;
+#hiddenUpload {
+    display: none;
 }
-#wpm{
-	width: 520px;
+#wpm {
+    width: 520px;
 }
-#controlGroup{
-	    top: 80px;
+#controlGroup {
+    top: 80px;
     right: 0;
     left: 0;
-	width:263;
+    width: 263;
 }
 .openBold {
     font-family: boldOpenSans;
@@ -133,7 +132,7 @@ body {
 }
 .middleSelector {
     position: absolute;
-    height: 50px;
+    height: 20px;
     top: 0px;
     left: 300px;
     width: 302px;
@@ -187,4 +186,22 @@ position: absolute;
     /* shadow */
 
 text-shadow: 0 0 5px #444;
+}
+#leftText {
+    width: 48%;
+    float: left;
+    position: relative;
+    text-align: right;
+    padding: 0px;
+    padding-left: 0px;
+}
+#middleText {
+    position: relative;
+    float: left;
+    margin-top: -5px;
+}
+#rightText {
+    float: left;
+    position: relative;
+    text-align: left;
 }
